# omnimind

./: .gitignore  AGENTS.md  ARCHITECTURE.md  BENCHMARKS.md  CLAUDE.md  KIMI_CLI_BUS_INSTRUCTION.md  LICENSE  README.md  ROADMAP.md  package-lock.json  package.json  tsconfig.json  vitest.config.ts
benchmarks/: BENCHMARKS.md  debug-search.ts  longmemeval-fallback.ts  longmemeval-rocchio.ts  longmemeval-turn.ts  longmemeval-xenova.ts  longmemeval.ts  prediction-accuracy.ts
coverage/: coverage-final.json  index.html
coverage/src/: index.html  index.ts.html
gui/: index.html  package.json  vite.config.ts
gui/src/: App.svelte  app.css
scripts/: force-l2-aging.ts
src/: cli.ts  index.ts  mcp-server.ts  server.ts
src-tauri/: Cargo.toml  tauri.conf.json
src-tauri/icons/: icon.icns
src-tauri/src/: main.rs
src/bus/: ConflictResolver.ts  MemoryBus.ts  types.ts
src/core/: CryptoEngine.ts  EmbeddingEngine.ts  MemoryStore.ts  RelationExtractor.ts  SearchEngine.ts  types.ts
src/layers/: AgingPipeline.ts
src/mcp/: server.ts
src/prediction/: ActivityTracker.ts  ContextInjector.ts  IntentPredictor.ts  PatternStore.ts
tests/bus/: ConflictResolver.test.ts  MemoryBus.test.ts
tests/core/: CryptoEngine.test.ts  EmbeddingEngine.test.ts  GraphStore.test.ts  MemoryStore.namespace.test.ts  MemoryStore.test.ts  MemoryStore.turns.test.ts  RelationExtractor.test.ts  SearchEngine.test.ts
tests/integration/: EndToEnd.test.ts  GraphAging.test.ts  ImportExport.test.ts
tests/layers/: AgingPipeline.test.ts
tests/prediction/: ActivityTracker.test.ts  ContextInjector.test.ts  (+2 more)
(+28 files in other folders)
